--- a/thesis/diploma.tex
+++ b/thesis/diploma.tex
@@ -20,6 +20,7 @@
 \usepackage{setspace}  % Ettol a tablazatok, abrak, labjegyzetek maradnak 1-es sorkozzel!
 \usepackage[hang]{caption}
 \usepackage{hyperref}
+\usepackage{syntax}
 
 %--------------------------------------------------------------------------------------
 % Main variables
@@ -87,7 +88,7 @@
 	columns=fixed,
 	backgroundcolor=\color{lightgray},
 } 		
-\def\lstlistingname{lista}	
+\def\lstlistingname{Example}	
 
 %--------------------------------------------------------------------------------------
 %	Some new commands and declarations
